--- a/TotallySafe.html
+++ b/TotallySafe.html
@@ -51,40 +51,38 @@
     /* Fake Popups */
     .popup {
       position: absolute;
-      width: 300px;
-      height: 200px;
+      width: 200px;
+      height: 150px;
       background: rgba(0, 0, 0, 0.8);
       border: 2px solid red;
       box-shadow: 0 0 20px red;
       color: white;
-      padding: 20px;
-      font-size: 1.2em;
+      padding: 10px;
+      font-size: 1em;
       animation: popup 0.8s ease-out forwards;
       z-index: 9999;
+      overflow-wrap: break-word;
     }
 
-    /* Random popup positions */
-    .popup:nth-child(1) { top: 10%; left: 20%; }
-    .popup:nth-child(2) { top: 40%; left: 50%; }
-    .popup:nth-child(3) { top: 70%; left: 10%; }
-
-    /* Buttons */
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      color: red;
-      border: 2px solid red;
-      text-transform: uppercase;
-      font-size: 1em;
-      cursor: pointer;
-      animation: flicker 2s infinite;
-      margin-top: 20px;
-      background: none;
+    .popup h2 {
+      font-size: 1.2em;
+      margin: 0;
+      text-shadow: 0 0 5px red;
     }
 
-    .button:hover {
-      color: black;
-      background: red;
+    .popup p {
+      font-size: 0.9em;
+      margin: 5px 0;
+    }
+
+    /* Glitch Effect Styles */
+    .glitch {
+      position: absolute;
+      color: lime;
+      font-size: calc(10px + 2vw);
+      font-weight: bold;
+      transform: rotate(0deg);
+      animation: flicker 0.2s infinite;
     }
   </style>
 </head>
@@ -92,34 +90,68 @@
   <h1>YOU GOT PWNED!</h1>
   <p>This is a security audit! Report this breach immediately!</p>
 
-  <!-- Fake Popups -->
-  <div class="popup">Critical Error! Data Breach Detected!</div>
-  <div class="popup">Your system is vulnerable! Take action now!</div>
-  <div class="popup">Admin credentials exposed! 😱</div>
-
-  <!-- Button -->
-  <div style="text-align: center;">
-    <a class="button" href="https://www.github.com/">Click to Fix</a>
-  </div>
-
   <!-- Background Chaos -->
   <script>
-    function createGlitchEffect() {
-      const randomText = "█▓▒░▉▉▊▊▋▋▍▍▌▌▌▒░█▓";
-      const glitch = document.createElement('div');
-      glitch.style.position = "absolute";
-      glitch.style.color = "lime";
-      glitch.style.fontSize = Math.random() * 20 + 10 + "px";
-      glitch.style.left = Math.random() * 100 + "vw";
-      glitch.style.top = Math.random() * 100 + "vh";
-      glitch.style.transform = "rotate(" + Math.random() * 360 + "deg)";
-      glitch.style.zIndex = "999";
-      glitch.textContent = randomText[Math.floor(Math.random() * randomText.length)];
-      document.body.appendChild(glitch);
-      setTimeout(() => glitch.remove(), 500);
+    let popupCount = 0;
+
+    function createPopup() {
+      const messages = [
+        "CRITICAL ERROR!",
+        "SYSTEM BREACH DETECTED!",
+        "ADMIN PASSWORD EXPOSED!",
+        "UNAUTHORIZED ACCESS!",
+        "VIRUS FOUND!",
+        "NETWORK FAILURE!"
+      ];
+
+      const randomMessage = messages[Math.floor(Math.random() * messages.length)];
+
+      const popup = document.createElement('div');
+      popup.className = 'popup';
+      popup.style.left = `${Math.random() * (window.innerWidth - 200)}px`;
+      popup.style.top = `${Math.random() * (window.innerHeight - 150)}px`;
+
+      popup.innerHTML = `
+        <h2>${randomMessage}</h2>
+        <p>Your system is at risk! Act now!</p>
+      `;
+
+      document.body.appendChild(popup);
+      popupCount++;
+
+      // Stop adding popups after 1 minute
+      if (popupCount < 200) {
+        setTimeout(createPopup, Math.random() * 500); // Add another popup every 0.5s
+      }
     }
 
-    setInterval(createGlitchEffect, 100); // Generate glitches every 100ms
+    // Start creating popups
+    createPopup();
+
+    function createGlitchEffect() {
+      const randomText = "█▓▒░▉▊▋▌▍▌▒░█▓";
+      const glitch = document.createElement('div');
+      glitch.className = 'glitch';
+      glitch.style.left = `${Math.random() * 100}vw`;
+      glitch.style.top = `${Math.random() * 100}vh`;
+      glitch.style.transform = `rotate(${Math.random() * 360}deg) scale(${Math.random() * 2})`;
+      glitch.textContent = randomText[Math.floor(Math.random() * randomText.length)];
+
+      document.body.appendChild(glitch);
+      setTimeout(() => glitch.remove(), 300); // Remove glitch after 300ms
+    }
+
+    // Add glitch effects continuously
+    setInterval(createGlitchEffect, 50);
+
+    function flashBackground() {
+      document.body.style.backgroundColor = ['black', 'red', 'lime', 'darkred'][Math.floor(Math.random() * 4)];
+      setTimeout(() => (document.body.style.backgroundColor = 'black'), 100);
+    }
+
+    // Random background flashes
+    setInterval(flashBackground, 1000);
   </script>
 </body>
 </html>
+
