--- a/TotallySafe.html
+++ b/TotallySafe.html
@@ -28,22 +28,6 @@
       color: white;
     }
 
-    /* Keyframes for glitch and popup animations */
-    @keyframes glitch {
-      0% { opacity: 1; transform: translate(0, 0); }
-      20% { opacity: 0.8; transform: translate(-2px, 2px); }
-      40% { opacity: 1; transform: translate(2px, -2px); }
-      60% { opacity: 0.8; transform: translate(-2px, -2px); }
-      80% { opacity: 1; transform: translate(2px, 2px); }
-      100% { opacity: 1; transform: translate(0, 0); }
-    }
-
-    @keyframes popup {
-      0% { transform: scale(0); opacity: 0; }
-      50% { transform: scale(1.2); opacity: 1; }
-      100% { transform: scale(1); }
-    }
-
     /* Fake Popup */
     .popup {
       position: fixed;
@@ -58,7 +42,6 @@
       color: white;
       padding: 20px;
       font-size: 1em;
-      animation: popup 0.8s ease-out forwards;
       z-index: 9999;
       text-align: center;
     }
@@ -81,7 +64,6 @@
       font-size: calc(10px + 2vw);
       font-weight: bold;
       transform: rotate(0deg);
-      animation: glitch 0.3s infinite;
     }
 
     /* 404 Page Styles */
@@ -189,11 +171,11 @@
       glitch.textContent = randomText[Math.floor(Math.random() * randomText.length)];
 
       document.body.appendChild(glitch);
-      setTimeout(() => glitch.remove(), 300); // Remove glitch after 300ms
+      setTimeout(() => glitch.remove(), 500); // Remove glitch after 500ms
     }
 
     // Add glitch effects continuously
-    setInterval(createGlitchEffect, 100);
+    setInterval(createGlitchEffect, 1000); // Glitch spawns once every second
 
     // Start showing popups
     setTimeout(showPopup, 2000);
