--- a/TotallySafe.html
+++ b/TotallySafe.html
@@ -100,8 +100,10 @@
 </head>
 <body>
   <!-- Main Content -->
-  <h1 id="main-title">YOU GOT PWNED!</h1>
-  <p id="main-message">This is a security audit! Report this breach immediately!</p>
+  <div id="main-content">
+    <h1>YOU GOT PWNED!</h1>
+    <p>This is a security audit! Report this breach immediately!</p>
+  </div>
 
   <!-- Popups -->
   <div id="popup-container"></div>
@@ -153,12 +155,10 @@
 
     function show404Page() {
       const errorPage = document.getElementById("error-page");
-      const mainTitle = document.getElementById("main-title");
-      const mainMessage = document.getElementById("main-message");
+      const mainContent = document.getElementById("main-content");
 
       // Hide main content and show error page
-      mainTitle.classList.add("hidden");
-      mainMessage.classList.add("hidden");
+      mainContent.style.display = "none";
       errorPage.classList.remove("hidden");
     }
 
