--- a/TotallySafe.html
+++ b/TotallySafe.html
@@ -68,7 +68,7 @@
 </head>
 <body>
   <h1>YOU GOT PWNED!</h1>
-  <p>This is a security audit! Report this breach immediately!</p>
+  <p>This is a security audit! Report this to Lee immediately!</p>
 
   <!-- Background Chaos -->
   <script>
@@ -95,7 +95,7 @@
 
         popup.innerHTML = `
           <h2>${randomMessage}</h2>
-          <p>Your system is at risk! Act now!</p>
+          <p>Your system is at risk! Contact Lee! </p>
         `;
 
         document.body.appendChild(popup);
