--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
 <body>
   <!-- 404 Message -->
   <h1>404 ERROR</h1>
-  <p>Page not found. Your system is at risk!</p>
+  <p>Page not found. Contact Lee immediately!</p>
 
   <!-- Glitch Lines -->
   <div class="glitch-line line1"></div>
