--- a/404.html
+++ b/404.html
@@ -23,6 +23,14 @@
       animation: glitch 1.5s infinite;
     }
 
+    h2 {
+      font-size: 4em;
+      text-align: center;
+      color: green;
+      text-shadow: 0 0 5px lime;
+      animation: flicker 2s infinite;
+    }
+
     p {
       font-size: 2em;
       text-align: center;
@@ -79,6 +87,7 @@
 <body>
   <!-- 404 Message -->
   <h1>404 ERROR</h1>
+  <h2>Contact Lee immediately</h2>
   <p>Page not found. Contact Lee immediately!</p>
 
   <!-- Glitch Lines -->
