--- a/404.html
+++ b/404.html
@@ -26,6 +26,9 @@
     h2 {
       font-size: 4em;
       text-align: center;
+      margin-left: 15%;
+      margin-right: 15%;
+      padding: 10;
       color: green;
       text-shadow: 0 0 5px lime;
       animation: flicker 2s infinite;
